RESOLVED FIXED270100
[GStreamer] Fix trimming of track IDs
https://bugs.webkit.org/show_bug.cgi?id=270100
Summary [GStreamer] Fix trimming of track IDs
Vivienne Watermeier
Reported 2024-02-26 10:23:06 PST
In a previous PR [1] I implemented trimming leading zeroes in track IDs, however, since StringView::trim() affects both ends of the string, the patch accidentally also removes trailing zeroes. [1]: https://github.com/WebKit/WebKit/pull/23668
Attachments
Vivienne Watermeier
Comment 1 2024-02-26 10:28:27 PST
EWS
Comment 2 2024-02-27 05:28:25 PST
Committed 275378@main (877ae86c324a): <https://commits.webkit.org/275378@main> Reviewed commits have been landed. Closing PR #25114 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-27 05:29:14 PST
Note You need to log in before you can comment on or make changes to this bug.