[GStreamer] Fix trimming of track IDs https://bugs.webkit.org/show_bug.cgi?id=270100

Reviewed by Xabier Rodriguez-Calvar.

Use StringView::find() to trim zeroes instead of ::trim(), to not remove
trailing zeroes.

See previous PR: https://github.com/WebKit/WebKit/pull/23668

* Source/WebCore/platform/graphics/gstreamer/TrackPrivateBaseGStreamer.cpp:
(WebCore::trimStreamId): fix implementation

Canonical link: https://commits.webkit.org/275378@main